--- a/Mavendemo/pom.xml
+++ b/Mavendemo/pom.xml
@@ -31,7 +31,10 @@
 				<artifactId>
 					maven-surefire-plugin
 				</artifactId>
-					<version>2.19.1</version>
+				<version>2.19.1</version>
+				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
